@@ -1,6 +1,7 @@
 package modelado;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class EstrategiaAleatoria implements Estrategia {
 
@@ -8,7 +9,8 @@ public class EstrategiaAleatoria implements Estrategia {
 	public Bloque siguienteBloque(List<Bloque> bloques, int actual, List<Bloque> bloquesCompletos) {
 		// Lista de bloques disponibles que cumplen las condiciones
 		List<Bloque> bloquesDisponibles = bloques.stream()
-				.filter(bloque -> !bloquesCompletos.contains(bloque) && !bloque.equals(bloques.get(actual))).toList();
+				.filter(bloque -> !bloquesCompletos.contains(bloque) && !bloque.equals(bloques.get(actual)))
+				.collect(Collectors.toList());
 
 		// Si no hay bloques disponibles, devuelve null
 		if (bloquesDisponibles.isEmpty()) {
@@ -25,7 +27,7 @@ public class EstrategiaAleatoria implements Estrategia {
 		// Filtrar las preguntas disponibles en el bloque actual
 		List<Pregunta> preguntasDisponibles = Bactual.getPreguntas().stream()
 				.filter(pregunta -> !PreguntasCompletas.contains(pregunta) && pregunta.getNumPregunta() != Pactual)
-				.toList();
+				.collect(Collectors.toList());
 
 		// Si no hay preguntas disponibles, devolver null
 		if (preguntasDisponibles.isEmpty()) {
